feat: returns immutable copies of api lists